packages/scrabble-solver/src/pages/index.module.scss
@import 'styles/variables';

$nav-height: 40px;
$sidebar-width: 400px;
$tiles-container-height: 200px;

.index {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.nav {
  position: relative;
  z-index: 1;
  flex: 0 0 auto;
  height: $nav-height;
  box-shadow: $box-shadow--bottom;
}

.content {
  flex: 1;
  display: flex;
  overflow: auto;
}

.boardContainer {
  background-color: gray;
  flex: 1;
}

.sidebar {
  flex: 0 0 $sidebar-width;
}

.tilesContainer {
  background-color: orange;
  position: relative;
  z-index: 1;
  flex: 0 0 $tiles-container-height;
  box-shadow: $box-shadow--top;
}

